Critical Error: need to resolve abstract class issue in DTO objects